discussion/kv_engine/173282/173282_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51715: Timeout SeqnoPersistenceRequests when no data is flushed

Prior to this change, a SeqnoPersistenceRequest would wait 'forever'
if no data is moving through the vbucket and never timeout. This is
because execution into the code managing the SeqnoPersistenceRequests
only occurs from a successful flush of an item.

This is addressed in this commit by the addition of a new task which
will run when there are SeqnoPersistenceRequests to expire. This new
task runs for persistent and ephemeral (replacing
EphemeralBucket::NotifyHighPriorityReqTask) and aims to only run when
notifications might need expiring.

The configuration is updated so that 0 is a legal value for
"seqno_persistence_timeout", enabling tests with minimal real run-time.

Change-Id: I603ad4c8f62e496d5d6bea80bc5ef4f196714989

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-07 16:06:55.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-04-07 16:08:12.000000000
Message: 
Patch Set 5:

(1 comment)
File Comment: /PATCHSET_LEVEL -> Needs more test coverage - but worthy of reviewers comments on the overall code
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 16:10:33.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6167/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6167/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18284/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18284/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18620/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18620/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19316/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19316/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6227/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6227/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17381/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17381/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26694/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16512/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    bucket->addVbucketWithSeqnoPersistenceRequest(
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:51:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16512/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16512/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15447/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
